--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,14 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
     fetch-registry: true
     register-with-eureka: true
+  instance:
+    prefer-ip-address: true
+zuul:
+  routes:
+    Authentication-ms:
+      path: /Authentication-ms/**
+      serviceId: Authentication-ms
+      strip-prefix: false
+  ignored-services: '*'
+  prefix: /api
+
