--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8080
 spring:
   application:
     name: gateway
@@ -13,10 +13,5 @@ eureka:
     prefer-ip-address: true
 zuul:
   routes:
-    Authentication-ms:
-      path: /Authentication-ms/**
-      serviceId: Authentication-ms
-      strip-prefix: false
-  ignored-services: '*'
-  prefix: /api
-
+    authentication-ms:
+      url: http://localhost:8081
