--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,14 +6,26 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://172.17.0.2:8761/eureka/
     fetch-registry: true
     register-with-eureka: true
   instance:
     prefer-ip-address: true
+
 zuul:
   routes:
     authentication-ms:
       url: http://localhost:8081
     project-ms:
       url: http://localhost:8082
+logging:
+  level:
+    org.springframework.data.mongodb.core.MongoTemplate: DEBUG
+management:
+  info:
+    env:
+      enabled: true
+
+
+
+
