--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
 eureka:
   client:
     service-url:
+#      defaultZone: http://localhost:8761/eureka/
       defaultZone: http://172.17.0.2:8761/eureka/
     fetch-registry: true
     register-with-eureka: true
@@ -15,9 +16,16 @@ eureka:
 zuul:
   routes:
     authentication-ms:
-      url: http://localhost:8081
+#      url: http://localhost:8081
+      url: http://172.17.0.4:8081
+      path: /auth-ms/**
     project-ms:
-      url: http://localhost:8082
+#      url: http://localhost:8082
+      url: http://172.17.0.5:8082
+      path: /project-ms/**
+
+
+
 logging:
   level:
     org.springframework.data.mongodb.core.MongoTemplate: DEBUG
