--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,9 @@ zuul:
     notifs-ms:
       url: http://localhost:8084
       path: /notifs-ms/**
+    upload-ms:
+      url: http://localhost:8085
+      path: /upload-ms/**
 
 
 logging:
