--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-#      defaultZone: http://172.17.0.2:8761/eureka/
+#      defaultZone: http://172.20.0.10:8761/eureka/
     fetch-registry: true
     register-with-eureka: true
   instance:
@@ -16,23 +16,19 @@ eureka:
 zuul:
   routes:
     authentication-ms:
-      url: http://localhost:8081
-#      url: http://172.17.0.4:8081
+      url: http://172.20.0.30:8081
       path: /auth-ms/**
     project-ms:
-      url: http://localhost:8082
-#      url: http://172.17.0.5:8082
+      url: http://172.20.0.40:8082
       path: /project-ms/**
     task-ms:
-      url: http://localhost:8083
-#      url: http://172.17.0.6:8083
+      url: http://172.20.0.50:8083
       path: /task-ms/**
     notifs-ms:
-      url: http://localhost:8084
-#      url: http://172.17.0.7:8084
+      url: http://172.20.0.60:8084
       path: /notifs-ms/**
     upload-ms:
-      url: http://localhost:8085
+      url: http://172.20.0.70:8084
       path: /upload-ms/**
 
 
